--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
     <!-- Background Music -->
     <audio controls autoplay loop muted>
-        <source src="your-audio-file.mp3" type="audio/mpeg">
+        <source src="your-audio-file.mp4.mp4" type="audio/mp4">
         Your browser does not support the audio element.
     </audio>
 
     <!-- Video -->
     <video controls>
-        <source src="your-video-file.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+        <source src="ur-video-file.mp4.mp4" type="video/mp4">
+       
     </video>
 
     <p>Wishing you lots of love and happiness!</p>
