--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- Background Music -->
     <audio controls autoplay loop muted>
-        <source src="your-audio-file.mp4.mp4" type="audio/mp4">
+        <source src="your-audio-file.mp4.mp4" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
