--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
+            overflow: hidden;
         }
 
         h1 {
@@ -80,6 +81,23 @@
                 transform: translateY(-20px) rotate(-45deg);
             }
         }
+
+        /* Button styling */
+        .button {
+            background-color: #d32f2f;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #b71c1c;
+        }
     </style>
 </head>
 <body>
@@ -94,11 +112,17 @@
 
     <!-- Video -->
     <video controls>
-        <source src="ur-video-file.mp4.mp4" type="video/mp4">
-       
+        <source src="your-video-file.mp4.mp4" type="video/mp4">
+        Your browser does not support the video tag.
     </video>
 
-    <p>Wishing you lots of love and happiness!</p>
+    <!-- Button for interaction -->
+    <button class="button" onclick="showMessage()">Click Me!</button>
+
+    <!-- Hidden message -->
+    <p id="hidden-message" style="display: none; font-size: 1.5em; color: #d32f2f; margin-top: 20px;">
+        You are loved! 💕
+    </p>
 
     <!-- Heart animation -->
     <div class="heart" style="top: 10%; left: 20%;"></div>
@@ -106,5 +130,27 @@
     <div class="heart" style="top: 50%; left: 50%;"></div>
     <div class="heart" style="top: 70%; left: 10%;"></div>
     <div class="heart" style="top: 90%; left: 70%;"></div>
+
+    <script>
+        // JavaScript for interactivity
+        function showMessage() {
+            const message = document.getElementById('hidden-message');
+            message.style.display = 'block';
+        }
+
+        // Add more hearts dynamically
+        setInterval(() => {
+            const heart = document.createElement('div');
+            heart.classList.add('heart');
+            heart.style.left = Math.random() * 100 + '%';
+            heart.style.top = Math.random() * 100 + '%';
+            document.body.appendChild(heart);
+
+            // Remove hearts after animation ends
+            setTimeout(() => {
+                heart.remove();
+            }, 5000);
+        }, 1000);
+    </script>
 </body>
 </html>
