--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Day with Click Me</title>
+    <title>Valentine's Day with Animations</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,10 +17,13 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            overflow: hidden; /* Prevent scrolling */
+            position: relative;
         }
         h1 {
             font-size: 3em;
             margin-bottom: 20px;
+            animation: fadeIn 2s ease-in-out;
         }
         video {
             width: 80%;
@@ -42,6 +45,7 @@
             cursor: pointer;
             margin-top: 20px;
             transition: background-color 0.3s ease;
+            animation: pulse 2s infinite;
         }
         .button:hover {
             background-color: #b71c1c;
@@ -51,12 +55,69 @@
             font-size: 1.5em;
             color: #d32f2f;
             margin-top: 20px;
+            animation: fadeIn 2s ease-in-out;
+        }
+        /* Floating hearts animation */
+        .heart {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: #ff4d4d;
+            transform: rotate(-45deg);
+            animation: float 5s infinite ease-in-out;
+        }
+        .heart::before,
+        .heart::after {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: #ff4d4d;
+            border-radius: 50%;
+        }
+        .heart::before {
+            top: -10px;
+            left: 0;
+        }
+        .heart::after {
+            top: 0;
+            left: 10px;
+        }
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0) rotate(-45deg);
+            }
+            50% {
+                transform: translateY(-20px) rotate(-45deg);
+            }
+        }
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+        @keyframes pulse {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
         }
     </style>
 </head>
 <body>
     <h1>Happy Valentine's Day! 💖</h1>
-    <p>Click the button to see a special surprise.</p>
+    <p>
+        To the one who makes my heart skip a beat,<br>
+        Every moment with you feels so sweet.<br>
+        On this special day, I just want to say,<br>
+        You mean more to me than words can convey.<br>
+        Happy Valentine's Day, my love! 💖
+    </p>
 
     <!-- Click Me Button -->
     <button class="button" onclick="startPlayback()">Click Me!</button>
@@ -75,6 +136,13 @@
         <source src="palagi.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+
+    <!-- Floating Hearts -->
+    <div class="heart" style="top: 10%; left: 20%;"></div>
+    <div class="heart" style="top: 20%; left: 80%;"></div>
+    <div class="heart" style="top: 50%; left: 50%;"></div>
+    <div class="heart" style="top: 70%; left: 10%;"></div>
+    <div class="heart" style="top: 90%; left: 70%;"></div>
 
     <script>
         // JavaScript to handle playback
@@ -95,6 +163,20 @@
 
             // Hide the button after clicking
             document.querySelector('.button').style.display = 'none';
+
+            // Add more floating hearts dynamically
+            setInterval(() => {
+                const heart = document.createElement('div');
+                heart.classList.add('heart');
+                heart.style.left = Math.random() * 100 + '%';
+                heart.style.top = Math.random() * 100 + '%';
+                document.body.appendChild(heart);
+
+                // Remove hearts after animation ends
+                setTimeout(() => {
+                    heart.remove();
+                }, 5000);
+            }, 1000);
         }
 
         // Sync audio with video
