--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Day with Animations</title>
+    <title>Valentine's Day with Animated Message</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,40 +55,20 @@
             font-size: 1.5em;
             color: #d32f2f;
             margin-top: 20px;
-            animation: fadeIn 2s ease-in-out;
         }
-        /* Floating hearts animation */
-        .heart {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background-color: #ff4d4d;
-            transform: rotate(-45deg);
-            animation: float 5s infinite ease-in-out;
+        .message-line {
+            opacity: 0;
+            transform: translateY(20px);
+            animation: popOut 0.5s ease forwards;
         }
-        .heart::before,
-        .heart::after {
-            content: '';
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background-color: #ff4d4d;
-            border-radius: 50%;
-        }
-        .heart::before {
-            top: -10px;
-            left: 0;
-        }
-        .heart::after {
-            top: 0;
-            left: 10px;
-        }
-        @keyframes float {
-            0%, 100% {
-                transform: translateY(0) rotate(-45deg);
+        @keyframes popOut {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
             }
-            50% {
-                transform: translateY(-20px) rotate(-45deg);
+            100% {
+                opacity: 1;
+                transform: translateY(0);
             }
         }
         @keyframes fadeIn {
@@ -123,7 +103,12 @@
     <button class="button" onclick="startPlayback()">Click Me!</button>
 
     <!-- Hidden Message -->
-    <p id="hidden-message">You are loved! 💕</p>
+    <div id="hidden-message">
+        <div class="message-line">You are my sunshine,</div>
+        <div class="message-line">my star, my muse.</div>
+        <div class="message-line">With you, I’ll never lose.</div>
+        <div class="message-line">Happy Valentine's Day, my forever Valentine! 💕</div>
+    </div>
 
     <!-- Video -->
     <video id="valentine-video" loop>
@@ -137,18 +122,12 @@
         Your browser does not support the audio element.
     </audio>
 
-    <!-- Floating Hearts -->
-    <div class="heart" style="top: 10%; left: 20%;"></div>
-    <div class="heart" style="top: 20%; left: 80%;"></div>
-    <div class="heart" style="top: 50%; left: 50%;"></div>
-    <div class="heart" style="top: 70%; left: 10%;"></div>
-    <div class="heart" style="top: 90%; left: 70%;"></div>
-
     <script>
-        // JavaScript to handle playback
+        // JavaScript to handle playback and animations
         const video = document.getElementById('valentine-video');
         const audio = document.getElementById('valentine-audio');
         const hiddenMessage = document.getElementById('hidden-message');
+        const messageLines = document.querySelectorAll('.message-line');
 
         function startPlayback() {
             // Show the video
@@ -164,19 +143,13 @@
             // Hide the button after clicking
             document.querySelector('.button').style.display = 'none';
 
-            // Add more floating hearts dynamically
-            setInterval(() => {
-                const heart = document.createElement('div');
-                heart.classList.add('heart');
-                heart.style.left = Math.random() * 100 + '%';
-                heart.style.top = Math.random() * 100 + '%';
-                document.body.appendChild(heart);
-
-                // Remove hearts after animation ends
+            // Animate message lines one by one
+            messageLines.forEach((line, index) => {
                 setTimeout(() => {
-                    heart.remove();
-                }, 5000);
-            }, 1000);
+                    line.style.opacity = 1;
+                    line.style.transform = 'translateY(0)';
+                }, index * 500); // Delay each line by 500ms
+            });
         }
 
         // Sync audio with video
