--- a/index.html
+++ b/index.html
@@ -91,23 +91,17 @@
 </head>
 <body>
     <h1>Happy Valentine's Day! 💖</h1>
-    <p>
-        To the one who makes my heart skip a beat,<br>
-        Every moment with you feels so sweet.<br>
-        On this special day, I just want to say,<br>
-        You mean more to me than words can convey.<br>
-        Happy Valentine's Day, my love! 💖
-    </p>
 
     <!-- Click Me Button -->
     <button class="button" onclick="startPlayback()">Click Me!</button>
 
     <!-- Hidden Message -->
     <div id="hidden-message">
-        <div class="message-line">You are my sunshine,</div>
-        <div class="message-line">my star, my muse.</div>
-        <div class="message-line">With you, I’ll never lose.</div>
-        <div class="message-line">Happy Valentine's Day, my forever Valentine! 💕</div>
+        <div class="message-line">To the one who makes my heart skip a beat,</div>
+        <div class="message-line">Every moment with you feels so sweet..</div>
+        <div class="message-line">On this special day, I just want to say,.</div>
+        <div class="message-line">You mean more to me than words can convey.</div>
+        <div class="message-line">Happy Valentine's Day!💕</div>
     </div>
 
     <!-- Video -->
