--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Maricar</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png">
-    <meta name="description" content="A beautiful Valentine's Day message for someone special.">
+    <meta name="description" content="Maricar.">
     <meta property="og:title" content="Happy Valentine's Day!">
-    <meta property="og:description" content="A beautiful Valentine's Day message for someone special.">
+    <meta property="og:description" content="Maricar">
     <meta property="og:image" content="https://yourwebsite.com/valentine-image.jpg">
     <style>
         /* Global Styles */
