--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Maricar</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png">
-    <meta name="description" content="Maricar.">
+    <meta name="description" content="A beautiful Valentine's Day message for someone special.">
     <meta property="og:title" content="Happy Valentine's Day!">
-    <meta property="og:description" content="Maricar">
+    <meta property="og:description" content="A beautiful Valentine's Day message for someone special.">
     <meta property="og:image" content="https://yourwebsite.com/valentine-image.jpg">
     <style>
         /* Global Styles */
@@ -37,21 +37,23 @@
         h1 {
             font-family: 'Playfair Display', serif;
             font-weight: 700;
-            font-size: 3em; /* Reduced size for better fit */
+            font-size: 3em;
             margin-bottom: 20px;
             animation: fadeIn 2s ease-in-out;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
             letter-spacing: 1px;
+            z-index: 2; /* Ensure heading is above the rose rain */
         }
 
         /* Video Styling */
         video {
-            width: 90%; /* Adjusted for better fit */
-            max-width: 600px; /* Reduced max-width */
+            width: 90%;
+            max-width: 600px;
             border-radius: 15px;
             box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
             display: none;
             transition: transform 0.5s ease, box-shadow 0.5s ease;
+            z-index: 2; /* Ensure video is above the rose rain */
         }
 
         video:hover {
@@ -81,6 +83,7 @@
             letter-spacing: 1px;
             position: relative;
             overflow: hidden;
+            z-index: 2; /* Ensure button is above the rose rain */
         }
 
         .button::after {
@@ -110,19 +113,20 @@
         /* Hidden Message Styling */
         #hidden-message {
             display: none;
-            font-size: 1.2em; /* Reduced size for better fit */
+            font-size: 1.2em;
             color: #d32f2f;
             margin-top: 20px;
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 10px;
-            padding: 15px 20px; /* Reduced padding */
-            max-width: 500px; /* Reduced max-width */
+            padding: 15px 20px;
+            max-width: 500px;
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             font-family: 'Poppins', sans-serif;
             animation: fadeInMessage 1.5s ease-in-out;
+            z-index: 2; /* Ensure message is above the rose rain */
         }
 
         .message-line {
@@ -130,6 +134,37 @@
             transform: translateY(20px);
             animation: popOut 1s ease forwards;
             margin: 10px 0;
+        }
+
+        /* Rose Rain Animation */
+        .rose-rain {
+            position: absolute;
+            top: -50px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none; /* Ensure roses don't block clicks */
+            z-index: 1; /* Place roses behind content */
+        }
+
+        .rose {
+            position: absolute;
+            top: -50px;
+            animation: fall linear infinite;
+            width: 30px;
+            height: 30px;
+            background-image: url('https://www.transparentpng.com/thumb/rose/flower-rose-png-image-0.png'); /* Replace with your rose image */
+            background-size: cover;
+            filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.3));
+        }
+
+        @keyframes fall {
+            0% {
+                transform: translateY(-50px) rotate(0deg);
+            }
+            100% {
+                transform: translateY(100vh) rotate(360deg);
+            }
         }
 
         /* Animations */
@@ -190,16 +225,16 @@
         /* Responsive Design */
         @media (max-width: 768px) {
             h1 {
-                font-size: 2.5em; /* Further reduced for mobile */
+                font-size: 2.5em;
             }
             video {
-                width: 95%; /* Adjusted for mobile */
-                max-width: 100%; /* Full width on small screens */
+                width: 95%;
+                max-width: 100%;
             }
             #hidden-message {
-                font-size: 1em; /* Smaller font for mobile */
-                padding: 10px 15px; /* Reduced padding for mobile */
-                max-width: 90%; /* Full width on small screens */
+                font-size: 1em;
+                padding: 10px 15px;
+                max-width: 90%;
             }
         }
     </style>
@@ -231,11 +266,36 @@
         Your browser does not support the audio element.
     </audio>
 
+    <!-- Rose Rain Animation -->
+    <div class="rose-rain">
+        <!-- Roses will be dynamically added here -->
+    </div>
+
     <script>
         const video = document.getElementById('valentine-video');
         const audio = document.getElementById('valentine-audio');
         const hiddenMessage = document.getElementById('hidden-message');
         const messageLines = document.querySelectorAll('.message-line');
+        const roseRain = document.querySelector('.rose-rain');
+
+        // Function to create roses
+        function createRose() {
+            const rose = document.createElement('div');
+            rose.classList.add('rose');
+            rose.style.left = Math.random() * 100 + 'vw'; // Random horizontal position
+            rose.style.animationDuration = Math.random() * 3 + 2 + 's'; // Random fall speed
+            rose.style.opacity = Math.random(); // Random opacity
+            rose.style.transform = `scale(${Math.random()})`; // Random size
+            roseRain.appendChild(rose);
+
+            // Remove rose after it falls
+            setTimeout(() => {
+                rose.remove();
+            }, 5000); // Adjust based on animation duration
+        }
+
+        // Create roses at intervals
+        setInterval(createRose, 300); // Adjust interval for more/less roses
 
         function startPlayback() {
             video.style.display = 'block';
