--- a/index.html
+++ b/index.html
@@ -151,10 +151,7 @@
             position: absolute;
             top: -50px;
             animation: fall linear infinite;
-            width: 30px;
-            height: 30px;
-            background-image: url('https://www.transparentpng.com/thumb/rose/flower-rose-png-image-0.png'); /* Replace with your rose image */
-            background-size: cover;
+            font-size: 24px; /* Adjust size as needed */
             filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.3));
         }
 
@@ -282,6 +279,7 @@
         function createRose() {
             const rose = document.createElement('div');
             rose.classList.add('rose');
+            rose.textContent = '🌹'; // Use rose emoji
             rose.style.left = Math.random() * 100 + 'vw'; // Random horizontal position
             rose.style.animationDuration = Math.random() * 3 + 2 + 's'; // Random fall speed
             rose.style.opacity = Math.random(); // Random opacity
